2003-04-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/menu-entries.py: Add features entry.

	* site/about/features.html: New file.

	* site/index.html: Add heading.

2003-04-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (buttons): Use script-fu lily-buttons.

	* lily-button.scm: 
	* aqua-pill-button.scm: Fixes for scripting multiple buttons at once.

2003-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* newweb.css: Add margins.

	* format-page.py (main_template): Add.

	* GNUmakefile (buttons):
	(all): New target.
	(out/$(outball)): Add images too.

	* format-page.py: Further development.

	* lily-button.scm: 
	* aqua-pill-button.scm: 
	* newweb.css: New file.

2003-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (upload): New target.

2003-03-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* add ChangeLog
